--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,18 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+body > header h1 {
+  font-size: 2.5em;
+  font-family: $header-title-font-family;
+  font-weight: 500;
+  line-height: 1.2em;
+}
+
+section h1 {
+  font-weight: 300;
+  font-size: 1.5em;
+}
+
+body > div > div {
+  border-right-width:0px;
+}
