--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>A little something about me can be found <a href="http://wuyb.com">here</a>.</p>
 </section>
