--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -97,7 +97,7 @@ del, s { text-decoration: line-through; }
 
 abbr, acronym { border-bottom: 1px dotted; cursor: help; }
 
-pre, code, tt { @extend .mono; }
+pre, code, tt { @extend .sans; }
 
 sub, sup { line-height: 0; }
 
