--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -61,3 +61,7 @@ $footer-bg-front: #FFFFFF;
 $footer-bg-back: #FFFFFF;
 
 
+$link-color: lighten(#B22222, 3) !default;
+$link-color-hover: adjust-color($link-color, $lightness: 10, $saturation: 25) !default;
+$link-color-visited: adjust-color($link-color, $lightness: -4) !default;
+$link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
