--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -43,25 +43,32 @@ $solarized: light;
 //$pre-color: $base1;
 
 
-// blog.wuyb.com custom colors
-$header-bg: #FFFFFF;
-$subtitle-color: #000000;
-$title-color: #000000;
+$header-bg: #262324;
+$subtitle-color: #ffffff;
+$title-color: #ffffff;
 
-$main-bg: #FFFFFF !default;
-$page-bg: #FFFFFF !default;
-$page-border-bottom: #FFFFFF !default;
+//$main-bg: #FFFFFF !default;
+$main-bg: #262324 !default;
+//$page-bg: #FFFFFF !default;
+$page-bg: #262324 !default;
+$page-border-bottom: #262324 !default;
 
-$sidebar-bg: #FFFFFF;
-$sidebar-border: desaturate(darken($sidebar-bg, 7), 10) !default;
+$sidebar-bg: #262324;
+$sidebar-border: #262324 !default;
 
-$footer-bg-front: #FFFFFF;
-$footer-bg: #FFFFFF;
-$footer-bg-front: #FFFFFF;
-$footer-bg-back: #FFFFFF;
+$footer-color: #888 !default;
+$footer-bg-front: #262324;
+$footer-bg: #262324;
+$footer-bg-front: #262324;
+$footer-bg-back: #262324;
+$footer-link-color: lighten($footer-bg, 38) !default;
+$footer-link-color-hover: lighten($footer-color, 25) !default;
 
+$text-color: #ffffff !default;
+$text-color-light: #aaaaaa !default;
+$type-border: #dddddd !default;
 
-$link-color: lighten(#B22222, 3) !default;
+$link-color: #428bca !default;
 $link-color-hover: adjust-color($link-color, $lightness: 10, $saturation: 25) !default;
 $link-color-visited: adjust-color($link-color, $lightness: -4) !default;
 $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
