--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -5,7 +5,7 @@ body > header h1 {
   font-size: 2.5em;
   font-family: $header-title-font-family;
   font-weight: 500;
-  line-height: 1.2em;
+  line-height: 1em;
 }
 
 section h1 {
@@ -23,4 +23,27 @@ body > div > div {
 
 a {
   text-decoration:none
+}
+
+body {
+  line-height: 1.3em;
+  color: $text-color;
+}
+
+html {
+  background: #262324;
+}
+body {
+  > div {
+    background: #262324;
+    border-bottom: 1px solid $page-border-bottom;
+    > div {
+      background: #262324;
+      border-right: 1px solid $sidebar-border;
+    }
+  }
+}
+
+.post-content footer menu .edit.active .text {
+  color: #428bca;
 }
