--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,3 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
-<link href="http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,700,600" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,700,600" rel="stylesheet" type="text/css">
+<!--<link href="http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,700,600" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,700,600" rel="stylesheet" type="text/css">-->
